; ModuleID = '/home/carl/AnghaBench/radare2/libr/io/p/extr_io_r2k_windows.c_InstallService.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/io/p/extr_io_r2k_windows.c_InstallService.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@FALSE = common dso_local global i32 0, align 4
@SC_MANAGER_CREATE_SERVICE = common dso_local global i32 0, align 4
@SERVICE_START = common dso_local global i32 0, align 4
@DELETE = common dso_local global i32 0, align 4
@SERVICE_STOP = common dso_local global i32 0, align 4
@SERVICE_KERNEL_DRIVER = common dso_local global i32 0, align 4
@SERVICE_DEMAND_START = common dso_local global i32 0, align 4
@SERVICE_ERROR_IGNORE = common dso_local global i32 0, align 4
@TRUE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i32, i32)* @InstallService to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @InstallService(i8* %0, i32 %1, i32 %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i64, align 8
  %8 = alloca i32, align 4
  %9 = alloca i64, align 8
  %10 = alloca i32, align 4
  store i8* %0, i8** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %11 = load i32, i32* @FALSE, align 4
  store i32 %11, i32* %8, align 4
  %12 = load i32, i32* @SC_MANAGER_CREATE_SERVICE, align 4
  %13 = call i64 @OpenSCManager(i32* null, i32* null, i32 %12)
  store i64 %13, i64* %9, align 8
  %14 = load i64, i64* %9, align 8
  %15 = icmp ne i64 %14, 0
  br i1 %15, label %16, label %43

16:                                               ; preds = %3
  %17 = load i8*, i8** %4, align 8
  %18 = call i32 @r_sys_conv_utf8_to_win(i8* %17)
  store i32 %18, i32* %10, align 4
  %19 = load i64, i64* %9, align 8
  %20 = load i32, i32* %5, align 4
  %21 = load i32, i32* %6, align 4
  %22 = load i32, i32* @SERVICE_START, align 4
  %23 = load i32, i32* @DELETE, align 4
  %24 = or i32 %22, %23
  %25 = load i32, i32* @SERVICE_STOP, align 4
  %26 = or i32 %24, %25
  %27 = load i32, i32* @SERVICE_KERNEL_DRIVER, align 4
  %28 = load i32, i32* @SERVICE_DEMAND_START, align 4
  %29 = load i32, i32* @SERVICE_ERROR_IGNORE, align 4
  %30 = load i32, i32* %10, align 4
  %31 = call i64 @CreateService(i64 %19, i32 %20, i32 %21, i32 %26, i32 %27, i32 %28, i32 %29, i32 %30, i32* null, i32* null, i32* null, i32* null, i32* null)
  store i64 %31, i64* %7, align 8
  %32 = load i64, i64* %7, align 8
  %33 = icmp ne i64 %32, 0
  br i1 %33, label %34, label %38

34:                                               ; preds = %16
  %35 = load i64, i64* %7, align 8
  %36 = call i32 @CloseServiceHandle(i64 %35)
  %37 = load i32, i32* @TRUE, align 4
  store i32 %37, i32* %8, align 4
  br label %38

38:                                               ; preds = %34, %16
  %39 = load i32, i32* %10, align 4
  %40 = call i32 @free(i32 %39)
  %41 = load i64, i64* %9, align 8
  %42 = call i32 @CloseServiceHandle(i64 %41)
  br label %43

43:                                               ; preds = %38, %3
  %44 = load i32, i32* %8, align 4
  ret i32 %44
}

declare dso_local i64 @OpenSCManager(i32*, i32*, i32) #1

declare dso_local i32 @r_sys_conv_utf8_to_win(i8*) #1

declare dso_local i64 @CreateService(i64, i32, i32, i32, i32, i32, i32, i32, i32*, i32*, i32*, i32*, i32*) #1

declare dso_local i32 @CloseServiceHandle(i64) #1

declare dso_local i32 @free(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
